Made changes to the about section and changed experience to a component.

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -7,19 +7,8 @@
       <a href="mailto:hunter.hammond.dev@gmail.com">hunter.hammond.dev@gmail.com</a>
     </div>
     <p class="lead mb-5">I am a current student at Rochester Community and Technical College</p>
-    <div class="social-icons">
-      <a href="#">
-        <i class="fab fa-linkedin-in"></i>
-      </a>
-      <a href="#">
-        <i class="fab fa-github"></i>
-      </a>
-      <a href="#">
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a href="#">
-        <i class="fab fa-facebook-f"></i>
-      </a>
+    <div class="social-icons" style="font-size: 3.5rem;">
+      <a style="padding: 1.5rem;" href="https://github.com/hunterhammond-dev" target="_blank"><fa-icon [icon]="faGithub"></fa-icon></a>
     </div>
   </div>
 </section>
