--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,11 +60,7 @@
 
     <hr class="m-0">
 
-    <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
-      <div class="w-100">
-        <h2 class="mb-5">Experience</h2>
-      </div>
-    </section>
+    <app-experience></app-experience>
 
     <hr class="m-0">
 
