finalizing my protfolio

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -6,7 +6,7 @@
     <div class="subheading mb-5">Web Developer · stewartville, MN · (507) 990-5065 ·
       <a href="mailto:hunter.hammond.dev@gmail.com">hunter.hammond.dev@gmail.com</a>
     </div>
-    <p class="lead mb-5">I am a current student at Rochester Community and Technical College</p>
+    <p class="lead mb-5">I am a current student at Rochester Community and Technical College and have a passion for learning. Everyday that I am developing apps and/or websites I am expanding my knowledge of modern platforms.</p>
     <div class="social-icons" style="font-size: 3.5rem;">
       <a style="padding: 1.5rem;" href="https://github.com/hunterhammond-dev" target="_blank"><fa-icon [icon]="faGithub"></fa-icon></a>
     </div>
