--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,6 +20,10 @@
 
 <body id="page-top">
 
+  <div class="scrollbar scrollbar-primary">
+    <div class="force-overflow"></div>
+  </div>
+
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">Hunter Hammond</span>
